--- a/pages/salud.html
+++ b/pages/salud.html
@@ -124,27 +124,34 @@
               <li><a href="#">...</a></li>
               <li class="active">....</li>
             </ol>
-            <h1>PASTORAL SANTA ROSA</h1>
+            <h1>ÁREA DE SALUD</h1>
             <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>...</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>....</a> </div>
             <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">
-              <h1>Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</h1>
-			  <p>Querida comunidad educativa, </p>
-			  <p>Pertenecer es generar vínculos indisolubles, es una síntesis que puede definirse como Evangelio y Vida. Es así que nacen valores y actitudes que tienen una impronta propia de quienes iluminan lo cotidiano a la luz de la Palabra. </p>
-              <p>Gestar el cambio de nombre de la escuela, lleva tiempo, lleva sueños, lleva acompañamiento. Estamos haciendo historia y es difícil poner en palabras lo que condensa este momento tan trascendental.</p> 56
-              <p>Cuando Dios da un nombre nuevo quiere mostrar una nueva misión en relación con su plan de salvación y para manifestar su alianza, su bendición, el cumplimiento de su promesa.</p>
-			  <p>Abraham (padre enaltecido) pasa a llamarse Abraham (padre de multitudes). Sarai (princesa), a Sara (Madre de naciones). Jacob (el que suplanta), a Israel (fuerte con Dios). Simón (Dios ha escuchado), pasa a llamarse Pedro (piedra). </p>
-<p><blockquote> El nombre nuevo revela una nueva identidad: una nueva criatura 2Co 5,17</blockquote></p>
-<p>Al pasar de llamarse "Cervantes" (que manifiesta la excelencia de la cultura) a "Santa Rosa de Lima" (modelo de santidad) </p>
-<p>Dios nos invita a mirar la identidad más profunda de esta comunidad educativa que sin descuidar la formación cultural es misión en un lugar concreto, está llamada a transfigurar el barrio según el plan de Dios y buscar la santidad en lo cotidiano y sencillo de cada día como Rosa lo hizo. </p>
-<p>Santa Rosa tuvo siempre presente a Jesús en su vida. Su modo de obrar lo demostraba. 
-Queremos que este nuevo nombre no sea un cambio radical, sino una fuente de inspiración para lo que viene, pero siendo agradecidos con la gran historia y trayectoria de esta querida casa de estudios. </p>
-<p> Queremos que sea: una escuela que educa para la vida y una parroquia que evangeliza, donde Jesús sea el centro, mirando como el miro, hablando como el habló y actuando como él actuó. </p>
-<p>Hoy, queremos seguir soñando y celebramos todas las oportunidades que, tanto a ustedes, como a nosotros, nos permiten no perder las esperanzas en un mundo mejor y con mayores posibilidades. Donde hay sueños, donde hay alegría, ahí siempre está Jesús, porque Jesús es alegría y quiere ayudarnos a que esta permanezca todos los días. </p>
-<p>Todos juntos hagamos realidad el lema de nuestra Escuela: Colegio Parroquial Santa Rosa construyendo historia junto a VOS</p>
-<p>Quiero agradecer a DIOS a nuestro Obispo, Eduardo García, por confiar en este proyecto y acompañarme siempre con su cercanía y bendición. También agradezco a nuestra Inspectora Jefe, Mariana Suarez y al Equipo de Conducción que me acompaña en la tarea cotidiana. A todos los docentes, auxiliares y familias, por estar siempre presente adhiriendo al proyecto Institucional. </p>
-<p>Quiero agradecer la presencia de todos ustedes hoy, porque al ponerle fecha a un sueño, se convierte en meta. Una meta dividida en pasos se convierte en un plan. Un plan puesto en las manos de DIOS y acompañado de acciones con quienes están al lado nuestro, se vuelve realidad. Los llevo en mi corazón. Dios los bendiga. </p>
-<p><center>Pbro.. Walter Fabián Posca.</center></p>
-<p><center>Representante Legal. </center></p>
+              <h1>COVID-19 - coronavirus</h1>
+			  <p>Es la enfermedad infecciosa causada por el coronavirus que se ha descubierto más recientemente. Tanto el nuevo virus como 
+			  la enfermedad eran desconocidos antes de que estallara el brote en Wuhan (China) en diciembre de 2019.En los seres humanos 
+			  pueden causar infecciones respiratorias que van desde un resfrío común hasta enfermedades más graves.
+
+ 
+
+<p><b>SINTOMAS:</b></p>
+
+Los síntomas más habituales de la COVID-19 son la fiebre, la tos seca y el cansancio. Otros síntomas menos frecuentes que afectan a 
+algunos pacientes son los dolores y molestias, la congestión nasal, el dolor de cabeza, la conjuntivitis, el dolor de garganta, la diarrea, 
+la pérdida del gusto o el olfato y las erupciones cutáneas o cambios de color en los dedos de las manos o los pies. Estos síntomas suelen ser 
+leves y comienzan gradualmente. Algunas de las personas infectadas solo presentan síntomas levísimos.
+
+ 
+
+<p><b>PERSONAS DE “RIESGO”</b></p>
+
+<p>Las personas de cualquier edad, incluso los niños, pueden contagiarse con COVID-19. Pero más comúnmente afecta 
+a los adultos de edad mediana y mayores. El riesgo de presentar síntomas peligrosos aumenta con la edad, y las personas 
+de 85 años y mayores están a mayor riesgo de los síntomas de gravedad.</p>
+
+<p>Las personas con varias afecciones crónicas tienen más probabilidades de tener síntomas peligrosos si se 
+infectan con covid-19. Estas afecciones incluyen diabetes tipo 2, obesidad grave, y enfermedades cardíacas de gravedad. 
+La presión alta y la diabetes tipo 1 quizás aumenten tu riesgo para síntomas graves de la covid-19</p>
 <!--<ul>
                 <li>Nullam vitae nibh odio, non scelerisque nibh</li>
                 <li>Nullam vitae nibh odio, non scelerisque nibh</li>
