--- a/pages/psicofilo.html
+++ b/pages/psicofilo.html
@@ -126,7 +126,7 @@
             </ol>
             <h1>TRABAJOS ESTUDIANTILES</h1>
             <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>...</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>....</a> </div>
-            <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">
+            <<!-- div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt=""> -->
               <h1>PSICOLOGIA Y PANDEMIA: VIAJE AL INTERIOR DE NUESTRAS EMOCIONES</h1>
 			  <p><b>PSICOLOGIA Y PANDEMIA: VIAJE AL INTERIOR DE NUESTRAS EMOCIONES</b></p>
 A partir de la película “Intensa –Mente” realizamos un viaje al interior de nuestras propias emociones en pandemia
