--- a/pages/about.html
+++ b/pages/about.html
@@ -68,7 +68,7 @@
               <li><a href="../pages/pastoral.html">Pastoral</a></li>
               <li><a href="../pages/salud.html">Salud</a></li>
               <li><a href="../pages/psicofilo.html">Psicología/Filosofía</a></li>
-              <li><a href="../pages/arte.html">Arte</a></li>
+              <!--<li><a href="../pages/arte.html">Arte</a></li>-->
               <li><a href="../pages/literatura.html">Literatura</a></li>
             </ul>
           </li>
