--- a/pages/revista.html
+++ b/pages/revista.html
@@ -71,7 +71,7 @@
               <li><a href="../pages/salud.html">Salud</a></li>
               <li><a href="../pages/psicofilo.html">Psicología/Filosofía</a></li>
               <<!--<li><a href="../pages/arte.html">Arte</a></li>-->
-              <li><a href="../pages/literatura.html">Literatura</a></li>
+              <!--<li><a href="../pages/literatura.html">Literatura</a></li>-->
             </ul>
           </li>
           <li><a href="../pages/calendario.html">Calendario de Eventos</a></li>
