--- a/pages/pastoral.html
+++ b/pages/pastoral.html
@@ -126,7 +126,7 @@
             </ol>
             <h1>PASTORAL SANTA ROSA</h1>
             <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>...</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>....</a> </div>
-            <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">
+            <div class="single_page_content"> <img class="img-center" src="../images/slider4.jpeg" alt="">
               <h1>Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</h1>
 			  <p>Querida comunidad educativa, </p>
 			  <p>Pertenecer es generar vínculos indisolubles, es una síntesis que puede definirse como Evangelio y Vida. Es así que nacen valores y actitudes que tienen una impronta propia de quienes iluminan lo cotidiano a la luz de la Palabra. </p>
