--- a/pages/salud.html
+++ b/pages/salud.html
@@ -126,7 +126,7 @@
             </ol>
             <h1>ÁREA DE SALUD</h1>
             <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>...</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>....</a> </div>
-            <div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">
+            <!--<div class="single_page_content"> <img class="img-center" src="../images/single_post_img.jpg" alt="">-->
               <h1>COVID-19 - coronavirus</h1>
 			  <p>Es la enfermedad infecciosa causada por el coronavirus que se ha descubierto más recientemente. Tanto el nuevo virus como 
 			  la enfermedad eran desconocidos antes de que estallara el brote en Wuhan (China) en diciembre de 2019.En los seres humanos 
