--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -152,14 +152,14 @@
   <td class=xl65 width=234 style='width:176pt'>será el 9/12 a las 19 hs. para
   los tres niveles con previa celebración de Misa.</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
+ <!--<tr height=20 style='height:15.0pt'>
   <td height=20 class=xl67 style='height:15.0pt'>ACTO DE COLACIÓN</td>
   <td class=xl66>16/12 18:30HS MISA 19HS ACTO</td>
- </tr>
- <tr height=20 style='height:15.0pt'>
+ </tr> -->
+ <!--<tr height=20 style='height:15.0pt'>
   <td height=20 class=xl67 style='height:15.0pt'>ACTO FIN DE CURSO</td>
   <td class=xl66>18:30HS MISA 19HS ACTO</td>
- </tr>
+ </tr> -->
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
   <td width=227 style='width:170pt'></td>
