--- a/pages/primario.html
+++ b/pages/primario.html
@@ -161,7 +161,7 @@
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl67 style='height:15.0pt'>ACTO DE COLACIÓN</td>
-  <td class=xl66>16/12 18:30HS MISA 19HS ACTO</td>
+  <td class=xl66></td>
  </tr>
  <tr height=60 style='height:45.0pt'>
   <td height=60 class=xl67 style='height:45.0pt'>PESEBRE VIVIENTE</td>
@@ -169,7 +169,7 @@
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl67 style='height:15.0pt'>ACTO FIN DE CURSO</td>
-  <td class=xl66>18:30HS MISA 19HS ACTO</td>
+  <td class=xl66> </td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
