--- a/pages/secundario.html
+++ b/pages/secundario.html
@@ -206,10 +206,10 @@ mso-fareast-font-family:Calibri;mso-hansi-font-family:Calibri;mso-bidi-font=
 "Times New Roman";mso-ansi-language:ES'>ACTO COLACIÓN<span
 style=3D'mso-spacerun:yes'>                                                
     
-</span>SÁBADO 12/12-<span style=3D'mso-spacerun:yes'>     </span><span
+</span>-<span style=3D'mso-spacerun:yes'>     </span><span
 style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'>    </s=
-pan>19:00
-Hs. <o:p></o:p></span></p>
+pan>
+ <o:p></o:p></span></p>
 
 <p class=3DMsoNormal style=3D'text-align:justify'><span lang=3DES style=3D'=
 mso-ansi-language:
@@ -236,12 +236,12 @@ style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
 n><span
 style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'> </span=
 >VIERNES
-18/12 – <span style=3D'mso-spacerun:yes'> </span><span
+ – <span style=3D'mso-spacerun:yes'> </span><span
 style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
 n><span
 style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
-n>18:30
-HS.<o:p></o:p></span></p>
+n>
+<o:p></o:p></span></p>
 
 <p class=3DMsoNormal style=3D'text-align:justify'><span lang=3DES style=3D'=
 mso-ansi-language:
