--- a/pages/primario.html
+++ b/pages/primario.html
@@ -160,7 +160,7 @@
   los tres niveles con previa celebración de Misa.</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl67 style='height:15.0pt'>ACTO DE COLACIÓN</td>
+  <td height=20 class=xl67 style='height:15.0pt'></td>
   <td class=xl66></td>
  </tr>
  <tr height=60 style='height:45.0pt'>
