--- a/pages/secundario.html
+++ b/pages/secundario.html
@@ -203,7 +203,7 @@ height:
 ibri;
 mso-fareast-font-family:Calibri;mso-hansi-font-family:Calibri;mso-bidi-font=
 -family:
-"Times New Roman";mso-ansi-language:ES'>ACTO COLACIÓN<span
+"Times New Roman";mso-ansi-language:ES'><span
 style=3D'mso-spacerun:yes'>                                                
     
 </span>-<span style=3D'mso-spacerun:yes'>     </span><span
