--- a/pages/secundario.html
+++ b/pages/secundario.html
@@ -229,13 +229,13 @@ style=3D'mso-spacerun:yes'> </span>19:00 HS.<o:p></o:p></span></p>
 
 <p class=3DMsoNormal style=3D'text-align:justify'><span lang=3DES style=3D'=
 mso-ansi-language:
-ES'>ACTO FIN DE CICLO LECTIVO 2020:<span style=3D'mso-spacerun:yes'>       
+ES'>:<span style=3D'mso-spacerun:yes'>       
       
 </span><span style=3D'mso-spacerun:yes'>   </span><span
 style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
 n><span
 style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'> </span=
->VIERNES
+>
  – <span style=3D'mso-spacerun:yes'> </span><span
 style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
 n><span
