--- a/pages/primario.html
+++ b/pages/primario.html
@@ -168,7 +168,7 @@
   <td class=xl65 width=234 style='width:176pt'>17/12 a las 19 hs. </td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl67 style='height:15.0pt'>ACTO FIN DE CURSO</td>
+  <td height=20 class=xl67 style='height:15.0pt'></td>
   <td class=xl66> </td>
  </tr>
  <![if supportMisalignedColumns]>
