--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -138,18 +138,18 @@
  </tr>
  <tr height=40 style='height:30.0pt'>
   <td height=40 class=xl67 style='height:30.0pt'>NOCHE DE TEATRO:</td>
-  <td class=xl65 width=234 style='width:176pt'>26/11, 19 Y 20 Hs.<br>
-    27/11, 19 Hs.</td>
+  <td class=xl65 width=234 style='width:176pt'><br>
+    </td>
  </tr>
  <tr height=60 style='height:45.0pt'>
   <td height=60 class=xl67 style='height:45.0pt'>MUESTRA DE INGLÉS:</td>
-  <td class=xl65 width=234 style='width:176pt'>4/12, <br>
-    T.M: 10 y 11 Hs.<br>
-    T.T: 15 y 16 Hs.</td>
+  <td class=xl65 width=234 style='width:176pt'> <br>
+    <br>
+    .</td>
  </tr>
  <tr height=60 style='height:45.0pt'>
   <td height=60 class=xl67 style='height:45.0pt'>LA MUESTRA NAVIDEÑA</td>
-  <td class=xl65 width=234 style='width:176pt'>será el 9/12 a las 19 hs. para
+  <td class=xl65 width=234 style='width:176pt'>para
   los tres niveles con previa celebración de Misa.</td>
  </tr>
  <!--<tr height=20 style='height:15.0pt'>
