--- a/pages/secundario.html
+++ b/pages/secundario.html
@@ -147,9 +147,9 @@ Calibri;mso-hansi-font-family:Calibri;mso-bidi-font-family:"Times New Roman=
 ""Times New Roman";mso-ansi-language:ES'>
 <mso-ansi-language:ES'>NOCHE DE TEATRO<span
 style=3D'mso-spacerun:yes'>                                                
-</span>JUEVES 19/11<span style=3D'mso-spacerun:yes'>    </span><span
+</span><span style=3D'mso-spacerun:yes'>    </span><span
 style=3D'mso-spacerun:yes'>        </span><span
-style=3D'mso-spacerun:yes'>  </span>19:00 Hs.<o:p></o:p></span></p>
+style=3D'mso-spacerun:yes'>  </span>.<o:p></o:p></span></p>
 
 <p class=3DMsoNormal style=3D'margin-bottom:10.0pt;text-align:justify;line-=
 height:
@@ -159,10 +159,10 @@ Calibri;mso-hansi-font-family:Calibri;mso-bidi-font-family:"Times New Roman=
 ""Times New Roman";mso-ansi-language:ES'>
 <mso-ansi-language:ES'>MUESTRA DE DANZA<span
 style=3D'mso-spacerun:yes'>                                            
-</span>MIÉRCOLES<span style=3D'mso-spacerun:yes'>  </span>25/11<span
+</span><span style=3D'mso-spacerun:yes'>  </span><span
 style=3D'mso-spacerun:yes'>    </span><span style=3D'mso-spacerun:yes'> </s=
 pan><span
-style=3D'mso-spacerun:yes'> </span>19:00 Hs.<o:p></o:p></span></p>
+style=3D'mso-spacerun:yes'> </span><o:p></o:p></span></p>
 
 <p class=3DMsoNormal style=3D'margin-bottom:10.0pt;text-align:justify;line-=
 height:
