--- a/pages/primario.html
+++ b/pages/primario.html
@@ -141,7 +141,7 @@
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl68 width=227 style='height:15.0pt;width:170pt'>ACTIVIDADES
   NIVEL PRIMARIO:</td>
-  <td class=xl69 width=234 style='width:176pt'>FECHAS Y HORARIOS</td>
+  <td class=xl69 width=234 style='width:176pt'></td>
  </tr>
  <tr height=40 style='height:30.0pt'>
   <td height=40 class=xl67 style='height:30.0pt'>NOCHE DE TEATRO:</td>
@@ -156,8 +156,7 @@
  </tr>
  <tr height=60 style='height:45.0pt'>
   <td height=60 class=xl67 style='height:45.0pt'>LA MUESTRA NAVIDEÑA</td>
-  <td class=xl65 width=234 style='width:176pt'>para
-  los tres niveles con previa celebración de Misa.</td>
+  <td class=xl65 width=234 style='width:176pt'></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl67 style='height:15.0pt'></td>
