--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -134,7 +134,7 @@
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl68 width=227 style='height:15.0pt;width:170pt'>ACTIVIDADES
   NIVEL PRIMARIO:</td>
-  <td class=xl69 width=234 style='width:176pt'>FECHAS Y HORARIOS</td>
+  <td class=xl69 width=234 style='width:176pt'></td>
  </tr>
  <tr height=40 style='height:30.0pt'>
   <td height=40 class=xl67 style='height:30.0pt'>NOCHE DE TEATRO:</td>
