--- a/pages/secundario.html
+++ b/pages/secundario.html
@@ -136,7 +136,7 @@
 =3DES
 style=3D'mso-ansi-language:ES'>ACTIVIDADES NIVEL SECUNDARIO:<span
 style=3D'mso-spacerun:yes'>                 </span><span
-style=3D'mso-spacerun:yes'>  </span>FECHAS Y HORARIOS PARA AGENDAR<o:p></o:=
+style=3D'mso-spacerun:yes'>  </span><o:p></o:=
 p></span></u></b></p>
 
 <p class=3DMsoNormal style=3D'margin-bottom:10.0pt;text-align:justify;line-=
