--- a/pages/primario.html
+++ b/pages/primario.html
@@ -148,33 +148,11 @@
   <td class=xl65 width=234 style='width:176pt'><br>
     .</td>
  </tr>
- <tr height=60 style='height:45.0pt'>
-  <td height=60 class=xl67 style='height:45.0pt'>MUESTRA DE INGLÉS:</td>
-  <td class=xl65 width=234 style='width:176pt'><br>
-    <br>
-    </td>
- </tr>
- <tr height=60 style='height:45.0pt'>
-  <td height=60 class=xl67 style='height:45.0pt'>LA MUESTRA NAVIDEÑA</td>
-  <td class=xl65 width=234 style='width:176pt'></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl67 style='height:15.0pt'></td>
-  <td class=xl66></td>
- </tr>
- <tr height=60 style='height:45.0pt'>
-  <td height=60 class=xl67 style='height:45.0pt'>PESEBRE VIVIENTE</td>
-  <td class=xl65 width=234 style='width:176pt'> </td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl67 style='height:15.0pt'></td>
-  <td class=xl66> </td>
- </tr>
- <![if supportMisalignedColumns]>
- <tr height=0 style='display:none'>
-  <td width=227 style='width:170pt'></td>
-  <td width=234 style='width:176pt'></td>
- </tr>
+<p>NOCHE DE TEATRO: </p>
+<p>MUESTRA DE INGLÉS: </p>
+<p>LA MUESTRA NAVIDEÑA</p>
+<p>PESEBRE VIVIENTE</p>
+
  <![endif]>
 </table>
 
