--- a/pages/secundario.html
+++ b/pages/secundario.html
@@ -139,118 +139,13 @@ style=3D'mso-spacerun:yes'>                 </span><span
 style=3D'mso-spacerun:yes'>  </span><o:p></o:=
 p></span></u></b></p>
 
-<p class=3DMsoNormal style=3D'margin-bottom:10.0pt;text-align:justify;line-=
-height:
-115%'><span lang=3DES style=3D'mso-ascii-font-family:Calibri;mso-fareast-fo=
-nt-family:
-Calibri;mso-hansi-font-family:Calibri;mso-bidi-font-family:"Times New Roman=
-""Times New Roman";mso-ansi-language:ES'>
-<mso-ansi-language:ES'>NOCHE DE TEATRO<span
-style=3D'mso-spacerun:yes'>                                                
-</span><span style=3D'mso-spacerun:yes'>    </span><span
-style=3D'mso-spacerun:yes'>        </span><span
-style=3D'mso-spacerun:yes'>  </span>.<o:p></o:p></span></p>
-
-<p class=3DMsoNormal style=3D'margin-bottom:10.0pt;text-align:justify;line-=
-height:
-115%'><span lang=3DES style=3D'mso-ascii-font-family:Calibri;mso-fareast-fo=
-nt-family:
-Calibri;mso-hansi-font-family:Calibri;mso-bidi-font-family:"Times New Roman=
-""Times New Roman";mso-ansi-language:ES'>
-<mso-ansi-language:ES'>MUESTRA DE DANZA<span
-style=3D'mso-spacerun:yes'>                                            
-</span><span style=3D'mso-spacerun:yes'>  </span><span
-style=3D'mso-spacerun:yes'>    </span><span style=3D'mso-spacerun:yes'> </s=
-pan><span
-style=3D'mso-spacerun:yes'> </span><o:p></o:p></span></p>
-
-<p class=3DMsoNormal style=3D'margin-bottom:10.0pt;text-align:justify;line-=
-height:
-115%'><span lang=3DES style=3D'mso-ascii-font-family:Calibri;mso-fareast-fo=
-nt-family:
-Calibri;mso-hansi-font-family:Calibri;mso-bidi-font-family:"Times New Roman=
-""Times New Roman";mso-ansi-language:ES'>
-<mso-ansi-language:ES'>MUESTRA DE INGLÉS<span
-style=3D'mso-spacerun:yes'>                                             
-</span> <span style=3D'mso-spacerun:yes'>    </span><span
-style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'>       =
- </span>
-<o:p></o:p></span></p>
-
-<p class=3DMsoNormal style=3D'margin-bottom:0cm;text-align:justify;line-hei=
-ght:
-normal'><span lang=3DES style=3D'mso-ansi-language:ES'>MUESTRA NAVIDEÑA
-INSTITUCIONAL <o:p></o:p></span></p>
-
-<p class=3DMsoNormal style=3D'margin-bottom:0cm;text-align:justify;line-hei=
-ght:
-normal'><span lang=3DES style=3D'mso-ansi-language:ES'>Y CELEBRACIÓN DE LA 
-SANTA
-MISA:<span style=3D'mso-spacerun:yes'>  </span><span
-style=3D'mso-spacerun:yes'>                 </span><span
-style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
-n><span
-style=3D'mso-spacerun:yes'>    </span><o:p></o:p></span></p>
-
-<p class=3DMsoNormal style=3D'margin-bottom:0cm;text-align:justify;line-hei=
-ght:
-normal'><span lang=3DES style=3D'mso-ansi-language:ES'><o:p>&nbsp;</o:p></s=
-pan></p>
-
-<p class=3DMsoNormal style=3D'margin-bottom:10.0pt;text-align:justify;line-=
-height:
-115%;tab-stops:135.75pt'><span lang=3DES style=3D'mso-ascii-font-family:Cal=
-ibri;
-mso-fareast-font-family:Calibri;mso-hansi-font-family:Calibri;mso-bidi-font=
--family:
-"Times New Roman";mso-ansi-language:ES'><span
-style=3D'mso-spacerun:yes'>                                                
-    
-</span>-<span style=3D'mso-spacerun:yes'>     </span><span
-style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'>    </s=
-pan>
- <o:p></o:p></span></p>
-
-<p class=3DMsoNormal style=3D'text-align:justify'><span lang=3DES style=3D'=
-mso-ansi-language:
-ES'>PESEBRE VIVIENTE:<span
-style=3D'mso-spacerun:yes'>                                          </span=
-><span
-style=3D'mso-spacerun:yes'>   </span><span style=3D'mso-spacerun:yes'>  </s=
-pan><span
-style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'> </span=
->
--<span style=3D'mso-spacerun:yes'>     </span><span
-style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'>  </spa=
-n><span
-style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'>  </spa=
-n><span
-style=3D'mso-spacerun:yes'> </span><o:p></o:p></span></p>
-
-<p class=3DMsoNormal style=3D'text-align:justify'><span lang=3DES style=3D'=
-mso-ansi-language:
-ES'>:<span style=3D'mso-spacerun:yes'>       
-      
-</span><span style=3D'mso-spacerun:yes'>   </span><span
-style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
-n><span
-style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'> </span=
->
- – <span style=3D'mso-spacerun:yes'> </span><span
-style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
-n><span
-style=3D'mso-spacerun:yes'>  </span><span style=3D'mso-spacerun:yes'> </spa=
-n>
-<o:p></o:p></span></p>
-
-<p class=3DMsoNormal style=3D'text-align:justify'><span lang=3DES style=3D'=
-mso-ansi-language:
-ES'><o:p></o:p></span></p>
-
-<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'><o:p>;</o:p></span></p>
-
-<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'><span
-style=3D'mso-spacerun:yes'>               </span><o:p></o:p></span></p>
+<p>NOCHE DE TEATRO</p>                                                               .
+<p>MUESTRA DE DANZA </p>                                                    
+<p>MUESTRA DE INGLÉS</p>                                                          =  
+<p>MUESTRA NAVIDEÑA INSTITUCIONAL</p>
+<p>Y CELEBRACIÓN DE LA SANTA MISA: </p>
+<p>PESEBRE VIVIENTE: </p>                                                  
+               </span><o:p></o:p></span></p>
 
 </div>
               <!--<h1>Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</h1>
