--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -187,8 +187,7 @@ style=3D'mso-spacerun:yes'> </span><span style=3D'mso-spacerun:yes'> </span=
 >
 <o:p></o:p></span></p>
 
-<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'>ACTO FI=
-N DE CICLO
+<p class=3DMsoNormal><span lang=3DES style=3D'mso-ansi-language:ES'>ACTO FIN DE CICLO
 LECTIVO 2020:<span style=3D'mso-spacerun:yes'>              </span><span
 style=3D'mso-spacerun:yes'>   </span><span style=3D'mso-spacerun:yes'>  </s=
 pan><span
