--- a/pages/primario.html
+++ b/pages/primario.html
@@ -134,27 +134,15 @@
 			<h1>EVENTOS PRIMARIA NOVIEMBRE Y DICIEMBRE</h1>
 			<div><center><body link="#0563C1" vlink="#954F72">
 
-<table border=0 cellpadding=0 cellspacing=0 width=461 style='border-collapse:
- collapse;table-layout:fixed;width:346pt'>
- <col width=227 style='mso-width-source:userset;mso-width-alt:8301;width:170pt'>
- <col width=234 style='mso-width-source:userset;mso-width-alt:8557;width:176pt'>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl68 width=227 style='height:15.0pt;width:170pt'>ACTIVIDADES
-  NIVEL PRIMARIO:</td>
-  <td class=xl69 width=234 style='width:176pt'></td>
- </tr>
- <tr height=40 style='height:30.0pt'>
-  <td height=40 class=xl67 style='height:30.0pt'>NOCHE DE TEATRO:</td>
-  <td class=xl65 width=234 style='width:176pt'><br>
-    .</td>
- </tr>
+<h1>ACTIVIDADES NIVEL PRIMARIO </h1>
+<br>
+</br>
 <p>NOCHE DE TEATRO: </p>
 <p>MUESTRA DE INGLÉS: </p>
 <p>LA MUESTRA NAVIDEÑA</p>
 <p>PESEBRE VIVIENTE</p>
 
- <![endif]>
-</table>
+ 
 
 </body></div></center>
             <h1>TARDES MÁGICAS</h1>
