--- a/pages/secundario.html
+++ b/pages/secundario.html
@@ -130,14 +130,7 @@
 			<h1> CRONOGRAMA DE EVENTOS </h1>
 			<div class=3DWordSection1>
 
-<p class=3DMsoNormal><span lang=3DEN-US><o:p>&nbsp;</o:p></span></p>
-
-<p class=3DMsoNormal><b style=3D'mso-bidi-font-weight:normal'><u><span lang=
-=3DES
-style=3D'mso-ansi-language:ES'>ACTIVIDADES NIVEL SECUNDARIO:<span
-style=3D'mso-spacerun:yes'>                 </span><span
-style=3D'mso-spacerun:yes'>  </span><o:p></o:=
-p></span></u></b></p>
+<h1>ACTIVIDADES NIVEL SECUNDARIO:</h1>
 
 <p>NOCHE DE TEATRO</p>                                                               .
 <p>MUESTRA DE DANZA </p>                                                    
@@ -145,7 +138,7 @@ p></span></u></b></p>
 <p>MUESTRA NAVIDEÑA INSTITUCIONAL</p>
 <p>Y CELEBRACIÓN DE LA SANTA MISA: </p>
 <p>PESEBRE VIVIENTE: </p>                                                  
-               </span><o:p></o:p></span></p>
+              
 
 </div>
               <!--<h1>Colegio Parroquial Santa Rosa ¿Por qué el cambio del nombre?</h1>
