--- a/pages/secundario.html
+++ b/pages/secundario.html
@@ -173,7 +173,7 @@ Queremos que este nuevo nombre no sea un cambio radical, sino una fuente de insp
               <h4>This is h4 title</h4>
               <h5>This is h5 title</h5>
               <h6>This is h6 Title</h6>
-              <button class="btn default-btn">Default</button>
+              <!-- <button class="btn default-btn">Default</button>
               <button class="btn btn-red">Red Button</button>
               <button class="btn btn-yellow">Yellow Button</button>
               <button class="btn btn-green">Green Button</button>
@@ -181,7 +181,7 @@ Queremos que este nuevo nombre no sea un cambio radical, sino una fuente de insp
               <button class="btn btn-orange">Orange Button</button>
               <button class="btn btn-blue">Blue Button</button>
               <button class="btn btn-lime">Lime Button</button>
-              <button class="btn btn-theme">Theme Button</button>
+              <button class="btn btn-theme">Theme Button</button> -->
             </div>
 			<div class="single_post_content">
             <h2><span>Galeria de Fotos</span></h2>
