--- a/pages/secundario.html
+++ b/pages/secundario.html
@@ -128,9 +128,9 @@
             <div class="post_commentbox"> <a href="#"><i class="fa fa-user"></i>Wpfreeware</a> <span><i class="fa fa-calendar"></i>6:49 AM</span> <a href="#"><i class="fa fa-tags"></i>Technology</a> </div>
             <div class="single_page_content"> <!-- <img class="img-center" src="../images/single_post_img.jpg" alt  -->
 			<h1> CRONOGRAMA DE EVENTOS </h1>
-			<div class=3DWordSection1>
+			<div>
 
-<h1>ACTIVIDADES NIVEL SECUNDARIO:</h1>
+<p>ACTIVIDADES NIVEL SECUNDARIO:</p>
 
 <p>NOCHE DE TEATRO</p>                                                               .
 <p>MUESTRA DE DANZA </p>                                                    
