--- a/pages/secundario.html
+++ b/pages/secundario.html
@@ -131,10 +131,9 @@
 			<div>
 
 <p>ACTIVIDADES NIVEL SECUNDARIO:</p>
-
-<p>NOCHE DE TEATRO</p>                                                               .
+<p>NOCHE DE TEATRO</p>
 <p>MUESTRA DE DANZA </p>                                                    
-<p>MUESTRA DE INGLÉS</p>                                                          =  
+<p>MUESTRA DE INGLÉS</p>                                                  
 <p>MUESTRA NAVIDEÑA INSTITUCIONAL</p>
 <p>Y CELEBRACIÓN DE LA SANTA MISA: </p>
 <p>PESEBRE VIVIENTE: </p>                                                  
